--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,8 @@
 			</section>
 		</header>
 		<section id="gallery">
-			<div>
-				<figure>
+			<div id="offer">
+				<!-- <figure>
 					<img src="img/ropa.jpg" class="image-responsive" alt="">
 				</figure><div id="description-gallery">
 					<h2 class="no-margin">15%</h2>
@@ -122,15 +122,15 @@
 					<div>
 						<button>COMPRAR</button>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<section id="clothes">
-			<div>
-				<h2>ROPA TÍPICA</h2>
+			<div id="tejidos">
+				<h2>TEJIDOS</h2>
 				<div>
 					<div class="articles">
-						<article>
+						<!-- <article>
 							<figure>
 								<img src="img/ropa.jpg" alt="">
 								<figcaption>
@@ -162,10 +162,15 @@
 									</div>
 								</figcaption>
 							</figure>
-						</article>
+						</article> -->
 					</div>
+				</div>
+			</div>
+			<div id="cueros">
+				<h2>CUEROS</h2>
+				<div>
 					<div class="articles">
-						<article>
+						<!-- <article>
 							<figure>
 								<img src="img/ropa.jpg" alt="">
 								<figcaption>
@@ -197,7 +202,167 @@
 									</div>
 								</figcaption>
 							</figure>
+						</article> -->
+					</div>
+				</div>
+			</div>
+			<div id="mostacilla">
+				<h2>MOSTACILLA</h2>
+				<div>
+					<div class="articles">
+						<!-- <article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
 						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article> -->
+					</div>
+				</div>
+			</div>
+			<div id="bolsos">
+				<h2>BOLSOS</h2>
+				<div>
+					<div class="articles">
+						<!-- <article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article> -->
+					</div>
+				</div>
+			</div>
+			<div id="carteras">
+				<h2>CARTERAS</h2>
+				<div>
+					<div class="articles">
+						<!-- <article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article> -->
+					</div>
+				</div>
+			</div>
+			<div id="ropas">
+				<h2>ROPAS</h2>
+				<div>
+					<div class="articles">
+						<!-- <article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+						<article>
+							<figure>
+								<img src="img/ropa.jpg" alt="">
+								<figcaption>
+									<div>
+										<span>Ropa típica</span>
+										<button>COMPRAR</button>
+									</div>
+								</figcaption>
+							</figure>
+						</article> -->
 					</div>
 				</div>
 			</div>
