--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
 					<ul class="no-margin no-padding list-none">
 						<li>
 							<div>
+								<span class="icon-cart"></span>
 								<button>COMPRAR</button>
 							</div>
 						</li>
@@ -77,6 +78,10 @@
 							<button id="btn-login">LOGIN</button>
 						</li>
 					</ul>
+					<div class="session hidden">
+						<h3 class="no-margin" id="username"></h3>
+						<button id="btn-logout">SALIR</button>
+					</div>
 				</div>
 			</section>
 			<section class="second">
