--- a/public/index.html
+++ b/public/index.html
@@ -98,23 +98,17 @@
 					<ul class="no-margin no-padding list-none">
 						<li>
 							<a href="index.html" class="no-underline item-menu-selected">INICIO</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="views/guatechapin.html" class="no-underline">QUIÉNES SOMOS</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="views/colecciones.html" class="no-underline">PRODUCTOS</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="views/dondeestamos.html" class="no-underline">DÓNDE ESTAMOS</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="views/contacto.html" class="no-underline">CONTACTO</a>
-						</li>
-						<li>
+						</li><li>
 							<a href="views/mas.html" class="no-underline">MÁS</a>
-						</li>
-						<li id="container-mis-compras" class="hidden">
+						</li><li id="container-mis-compras" class="hidden">
 							<a href="views/compras.html" class="no-underline">MIS COMPRAS</a>
 						</li>
 					</ul>
